workspace = { members = ["src/lib"] }
[package]
name = "pow_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.4", features = ["derive"]}
bincode = "1.3.3"
log = "0.4.19"
anyhow = "1.0.71"
simple_logger = "4.1.0"
futures = "0.3.28"
tokio = {version="1.28.2", features = ["full"]}
tokio-util = {version="0.7.8", features=["codec"]}
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21.0"
lib = { path = "./src/lib" }

[[bin]]
name = "node"
path = "src/server.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "query_client"
path = "src/query_client.rs"