[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
clap = {version = "4.3.4", features = ["derive"]}
hex = "0.4.3"
log = "0.4.19"
rand = "0.8.5"
serde_json = "1.0.91"
sha2 = "0.10.6"
simple_logger = "4.1.0"
tokio = {version="1.28.2", features = ["full"]}
tokio-util = {version="0.7.8", features=["codec"]}
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
rocksdb = "0.21.0"